<resources>
    <string name="app_name">phytogram</string>
    <string name="app_home">phytogram</string>
    <string name="app_search">phytogram</string>
    <string name="app_add">phytogram</string>
    <string name="app_notification">phytogram</string>
    <string name="app_guide">phytogram</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_add">Add</string>
    <string name="title_guide">Guide</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>